Improve the custom calorie tracking function

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ calorie_tracker/__pycache__/
 calorie_tracker/static/uploads/
 
 # database
-calorie_tracker/instance/
+instance/*
 
 # IDE files
 .vscode/
