Add some more parameters to the app manifest

--- a/calorie_tracker/static/manifest.json
+++ b/calorie_tracker/static/manifest.json
@@ -50,5 +50,9 @@
     "fitness",
     "health",
     "lifestyle"
-  ]
+  ],
+  "dir": "ltr",
+  "lang": "en-US",
+  "orientation": "portrait",
+  "prefer_related_applications": false
 }
