Initial support for push notifications

--- a/calorie_tracker/static/manifest.json
+++ b/calorie_tracker/static/manifest.json
@@ -74,5 +74,15 @@
   "dir": "ltr",
   "lang": "en-US",
   "orientation": "portrait",
-  "prefer_related_applications": false
+  "prefer_related_applications": false,
+  "gcm_sender_id": "103953800507",
+  "related_applications": [],
+  "permissions": [
+    "notifications"
+  ],
+  "scope": "/",
+  "serviceworker": {
+    "src": "/sw.js",
+    "scope": "/"
+  }
 }
