--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   db:
     image: postgres:16
@@ -18,7 +16,7 @@ services:
 
   web:
     build: .
-    command: gunicorn calorie_tracker:app
+    command: gunicorn -b 0.0.0.0:5000 calorie_tracker:app
     env_file: .env
     depends_on:
       - db
