--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
 
   worker:
     build: .
-    command: celery -A calorie_tracker.celery worker --loglevel=info
+    command: celery -A calorie_tracker.celery worker
     env_file: .env
     restart: unless-stopped
     depends_on:
@@ -35,7 +35,7 @@ services:
 
   beat:
     build: .
-    command: celery -A calorie_tracker.celery beat --loglevel=info
+    command: celery -A calorie_tracker.celery beat
     env_file: .env
     restart: unless-stopped
     depends_on:
